refine struct (convert into DDD), add convertor (order service)
